@@ -30,6 +30,7 @@ Version 1.7.11+svn:
    * Fix drakes tipping their wings in the water when flying
    * Fix some assertion failures when showing/hiding listbox items
    * Fixed serveral issues found by cppcheck
+   * Fixed drawing glitches with tiled gui2 windows in the lobby
 
 Version 1.7.11-1.8beta4:
  * Language and i18n:
